<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F5"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.HomeActivity">

    <include
        layout="@layout/actionbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="5dp"
                android:id="@+id/activity_home_take_attendance"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/attendance_icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_home_label_attendance"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:padding="5dp"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_home_hint_attendance"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:padding="5dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="5dp"
                android:layout_marginTop="20dp"
                android:id="@+id/activity_home_attendance_history"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/attendance_history_icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_home_label_history"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:padding="5dp"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_home_hint_history"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:padding="5dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/activity_home_attendance_apply_list"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/calendar"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Apply Leave"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:padding="5dp"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Apply leave if any emergency"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:padding="5dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/activity_home_attendance_log_out"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/logout_icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_home_label_sign_out"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:padding="5dp"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_home_hint_sign_up"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:padding="5dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>